--- a/public/css/customize/style.css
+++ b/public/css/customize/style.css
@@ -42,4 +42,28 @@
 .text-new{
     font-weight: bold; font-size: 20px;
 }
+
 /* End block button Edit and delete*/
+
+/*Button footer style*/
+.form-fixed-footer {
+    background: #fff;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    box-shadow: 0 -1px 5px -1px rgba(0, 0, 0, .1);
+    padding: 5px 30px;
+    left: 230px;
+    z-index: 50;
+}
+
+.btn-fill{
+    margin-right: 4px;
+}
+
+.input-error-message{
+    color:#D5464A;
+    font-size:13px;
+    text-transform:none!important
+}
+/*End button footer style*/
